EB-2008-11-07-0: Bugfix:     - duration of job start and shutdown behaviour
                               influence enforce_limits test. To improve
                               this I replaced shutdown_system_daemon by
                               soft_execd_shutdown call to get u state during
                               shutdown earlier. 
                 Review:       CR

MG-2008-11-07-0: Enhancem.:  - SI usecase can now run in run level week - REAL CHANGES
                 Review:     RH

CR-2008-11-06-0: Bugfix:     - do not send a "exit\n" when a connection is
                               not responding anymore
                             - enhanced CHECK_EXPECT_MATCH_MAX_BUFFER size
                             - reworked delete_temp_script_files() procedure
                             - reworked wait_for_remote_file() procedure
                 Review:     MD

MG-2008-11-06-0: Enhancem.:  - SI usecase can now run in run level week
                 Review:     RH

MD-2008-11-05-0: Bugfix:     - fixed upgrade test
                 Review:     JG

JG-2008-11-05-0: Bugfix:     Fixed a number of issues in testsuite setup with
                             BDB RPC server spooling.
                             Make shadowd_migrate test fail, if less than 2
                             shadow hosts are configured.
                 Review:     MD

TB-2008-11-04-0: Bugfix:     - operated add. clusters can no longer delete
                               files for the main TS -> one .testsuite_delete
                               file for each TS cluster
                 Enhancem.:  - a TS generated script returns now
                               _exit_status_:(91) in case of a trapped error
                 Review:     CR
 
MD-2008-11-04-0: Bugfix:     - checkin MD-2008-10-28-0 introduced a copy/paste 
                               tcl error.
 
RD-2008-11-03-0: Enhancem.:  - added new test per_job_consumables